@@ -1,3 +1,11 @@
+2011-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	maintcheck: avoid few spurious failures
+	* Makefile.am (sc_tests_plain_aclocal, sc_tests_plain_perl,
+	sc_tests_plain_autoconf, sc_tests_plain_automake,
+	sc_tests_plain_autoupate): Be stricter in matching an erroneous
+	literal command, i.e., `aclocal', `automake', `perl', etc.
+
 2011-06-20  Bert Wesarg <bert.wesarg@googlemail.com>  (tiny change)
 
 	check: don't use multi-line coloring for the report
